--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Deepnest.io",
+  "name": "deepnest.io",
   "version": "1.0.5",
   "description": "Deep nesting for Laser and CNC",
   "main": "main.js",
@@ -9,34 +9,35 @@
     "build": "node-gyp rebuild --target=1.4.8 --arch=x64 --dist-url=https://atom.io/download/atom-shell",
     "clean": "node-gyp clean configure build --verbose --target=1.4.8 --arch=ia32 --dist-url=https://atom.io/download/atom-shell",
     "pack": "build --dir",
-    "dist": "build"
+    "dist": "build",
+    "install": "node-gyp rebuild"
   },
-  "repository": "https://github.com/Jack000",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Jack000"
+  },
   "keywords": [
     "Electron",
     "Nesting",
     "CNC",
     "Laser"
   ],
-  "author": {
-    "name": "Jack Qiao",
-    "email": "jak000@gmail.com",
-    "url": "http://deepnest.io"
-  },
+  "author": "Jack Qiao <jak000@gmail.com> (http://deepnest.io)",
   "devDependencies": {
-    "electron": "^1.4.1",
-    "electron-builder": "^20.26.0",
+    "electron": "^30.0.3",
+    "electron-builder": "^24.13.3",
     "electron-rebuild": "^1.4.0"
   },
   "dependencies": {
-    "electron-config": "^0.2.1",
-    "electron-settings": "^2.2.2",
-    "electron-window-manager": "^1.0.4",
+    "electron-config": "^1.0.0",
+    "electron-settings": "^4.0.4",
+    "electron-window-manager": "^1.0.6",
     "filequeue": "^0.5.0",
-    "graceful-fs": "^4.1.11",
-    "melanke-watchjs": "^1.3.1",
-    "nan": "^2.4.0",
-    "paralleljs": "^0.2.1",
+    "graceful-fs": "^4.2.11",
+    "melanke-watchjs": "^1.5.2",
+    "nan": "^2.19.0",
+    "node-gyp": "^10.1.0",
+    "paralleljs": "^1.1.0",
     "request": "^2.79.0",
     "write-file-queue": "0.0.1"
   },
@@ -52,5 +53,7 @@
     "win": {
       "icon": "icon.ico"
     }
-  }
+  },
+  "gypfile": true,
+  "license": "ISC"
 }
